--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=aytonag5
+spring.application.name=contractorsg5
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dbaytonag5
+spring.datasource.url=jdbc:mysql://localhost:3306/dbcontractorsg5
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
