--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=contractorsg5
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dbcontractorsg5
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+server.port=8081
