--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=contractorsg5
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dbcontractorsg5
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Onoy213892741
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-server.port=8081
+server.port=8080
