--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.techtalk.aytona</groupId>
-	<artifactId>technology</artifactId>
+	<groupId>com.contractors.technologytalk</groupId>
+	<artifactId>contractors</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>technology</name>
+	<name>technoloy-talk</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
