fix(controller-api): fix all the endpoints of controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=contractorsg5
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dbcontractorsg5
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Onoy213892741
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
